--- a/www/static/index.html
+++ b/www/static/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="site.css" />
     
+    <link rel="icon" type="image/png" href="favicon.png" />
+
     <body>
         <div class="row text-center clock-row" ng-app="default-app" ng-controller="data-controller">
             <div class="col-sm-12 col-xs-12 div-bulb" 
