Embeded icon to index.html file

--- a/www/static/index.html
+++ b/www/static/index.html
@@ -8,7 +8,199 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="site.css" />
     
-    <link rel="icon" type="image/png" href="favicon.png" />
+    <link rel="icon" type="image/png" href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAPgAAADxCAYAAADm3nrDAAAACXBIWXMAAAsTAAALEwEAmpwYAAAA
+GXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAKiNJREFUeNrsXXl0VdW93mb5VxVB
+l8VhsUwA0SdQEkXwiRBunBiFMNpVaLmULkEZknZVxiDhEUbfagmIgm0kaaGrDEpAZYpCCBYrVLlB
+wFoEQpcioCtM4vvTd77DufQm3OGcPZ29z9nfWtcI5J577j7727/597vhhx9+ILrglttuy7F+4BVJ
+82sx69VwqbExRgwM3O+tiLO3clL8yoWEvdWgy/e6QWWCW4ue55C50Hr1prjEHutVjZdOD8VA2t6K
+Ovsr1+PbL1qvWuel9N5SjuCOlI46r2yOlwbZl1oPo9ps71ATG/uqlPPeqrdelXhZ++uCIXhqFanY
+eg0W/FF4GMXWg6g1290QWwCq8DmqSHXfCe6oSkspVXAWlDsP4oLZ/oEmdo4jXWXvLyWI7hvBrYVv
+5RB7jI/fH9I8ahxygSV3oUPulj7dwkXHLCwNFcEVWPjmDyFiSB5IlXy1IrfjmyCRSnBFpHZgSO6Y
+N62cP+JnXopfzSHXh39S+SDi4SAbOvoqFCN3In5trefSQBLcsYXgwc5VdF8oR3LH8RgnbpykrXxa
+w4sO8S80+6lUXNjRDjcpfP5sdqT5hcAQ3JE0tYqo5JlUqYhsx5uzPnESR5yf2UQv7IkTHj/9kPxm
+n/lAcI0WPY5ya+GLJUjm+CtPo7Wh2ci18ZfoDW2ta0xhDdEXjVEowZ2NXK3hBi7gKYGcQ67QIXRv
+El7UJ5C9mvNew6H8e83WQzjJhRFcQ8ndZCNai57H8N1bkf+k2BYGWELzsEerHcI3MK53g6brDJLn
+ifJjCCG45uSOY4hXKeN4b0HowYa7VNK9klCke1rrXmr9mKP5dxdik3MnuHOaQuXI1nzD7bEWPOLS
+DIkaSc1fslvrX+lyz10IwNq72m8qELw2QHZm22Sqk3OIgdTFATjIVFdfQfKlqVRYhWPeNODu4M3i
+TO5SEiwnUmGz75djvSode+/3htzCAalcZL1OQnA42lLaZ6Q5ilJ8R/8luGN3HwyaXQhnm8RKN4PM
+OEWuFnFUBkg9b6615PCyx3kSXKcYpCfbiIQ7tKUy0asdCR80VFkEjypDcE1jkAYGKoNLLgYzwTWP
+QWqJu+64g7S+/XZy0003kQ73drj29/m9el73ux3uu5/kPZg8pL9h3brr/q7x/Hly+PAR+/8vX75E
+jp84Yf//8VOnyHfffWcWX6LmyMOrzoPgpUTvGKTSJM7LzSNt2rQh7drmpCWrLLy3s4acP99I6vZ+
+cO0AMOQXhrFuQ4VCCG6kNx/cfPPNpEvHjrY0hhTO7x0hd9x5h1bfIXYwRj766O+29I/Vx0j9kSPm
+wbKDKaOSB8GN9GYgdEGkgPTp08d3qSxS2u/evZvUfbDXEN4nW5yV4JDeJhbsAve2bUu6dO5MRo8a
+TZ58+qlQrsGqlStJTU0N+fToUfL12bNmU7jDZovghdIJrkFhvRKk7vd0HzJi5MjASmkW6b5m7Rry
+4f79huyZ0Za2GIWF4DD+x5i1v179frqgINSSmlay77TUeYOkoG71xELwoGUQMSG3UycycMBAMm36
+NLMYlDh75ixZVl5ONlZvMlK9KahDZlQEd1I3zXFrAdL6WUsFH/Hss2YxOGLxosXknXffMc65/+BW
+mvRVWoKXkpB7z0HskpLZxrYWDCTjLHvlFUN0iv4EAG01WSTMxK57fxfZ+OabhtwSAM1o7969pOK1
+12wzKMSg2my0Ejx09jc21/Jlyw2pFZDoJaWlYbTRqexwzwR3stfOh2VVkTJaZm0oY2OrhVkzZpLV
+a9eEKUX2okXwVjIIjlMk8A42hLuGDRpMlr+y3LBJUcDrPnHiC6EJr1kEv0GWDR54dXzr5i2G3IoD
++frwhcA+h6YVdDjTgYQTPBLUBYTUnjx+gu3UMba2PoD5VLe7lgx95pmgf1UpBA8kkFYKqT1/4QKz
+GJpK88qqqtBIc0NwDxjzs1Hkk48/NlI7QNK8R/fuZjHCTnCo5Djxja0dPGm+fft229wyBPeOhiCp
+5Cb8FVzA3Hrrr+vsgzysCGWYDNloK1a8ql3XFAM6IJzWb0B/8sXJk1p/D1lhsgs6LxLsbYRWDLnD
+pbJve3erfbAbCe5Oiv+g45edNXWaKecMOYYPG6ZrYgxVqiqtk61ep5WBDWbIbQBAe9PU+dZA86Yb
+KT+slmgyxQTk/tMfK0x3FYNrgPPtlpYtyfwli3W67VqaN2XJ/DBDbgNVAG0OWp1GqKZ5U2BbNhly
+G7gBOsdoIMmpO6uyJLpUGnIbGEmurvRmleA51o+ThtwGRpILxSlLeufQvplagjt9mqtUW405M2ca
+chtQSXJFvetMmjLrZBOcLDFVbHETCjNghWJxcibpzWqDx6X4UhVWAhlqhtwGrECcXKGMtyjrBZjH
+BzuSvNb60duvVcADwYMxMOABRXLXyy0BWqwKwX0bI4yqMNRyGxjwJnl+QcSv7q3MY4O5qOgJqjpi
+4hHrdVHmKqBzB4oIDAx4AwUqK8qX+VFqWk84tkXj1vDBInlMJsmx8HgApirMQBQQjSl6YaJ0ctOM
+KBJO8GYkF16MgoU34TAD0YDjVlIzxz28yc3NBk9hk8O7LmS8sHGqGcjGQ127inS6zbWIXSriwkII
+nkB0SPNK65XN65pwqsHuNqq5gUzEDsZI/8GDeE9SgdQudjRfIRDadNG68VonUD+Wh9oOu3vJwkWG
+3AbSgY67yJLkSOwCNHAQSW7hEjyJREdFzCba9yOV0PQtN/AT0TFjyFtvv0379ouOnR2Tdb+yCV5L
+KBNi0OcarXANDPwEh/i4MHvbV4KzSG+o5gf3HzCquYESeG9nDRn6U6Z2222dNG/hyJJE7rhXnQqw
+fQy5DVQBwrOofWBAZaAkuEVwqCRzjGpuECQwhs6GWFK8WvQ9Zkkgd471gyppHqp5VWWV2UkGSmLG
+1Kksb1/qaLbaq+iQ3lRFKGNHjTaquYGywNgrhiy3bFrBp4yKzjLmKLdTJ3tOt4GBymD0qiNslsM7
+PVWmBC+lfeOc2S+Z3WOgPKBh/qaoiPbt0GyFNkwRJsFZpDc8lCqP9MWpXben1v7/xvPnyeHDR0ib
+Nm1Iu7Y59t91uO9+M2vcIxB6On++0f7/WKyeXLp8meT36tlEHVYZvXr1IvVHjtC+XVjYTCTBGwhF
+DjpqvDHAXSXbG5tv85YtJFYfI8dPnXKVjwwHYfvsbJLfsxcpKCgwlW9J1nTN2jXk+IkTromBvdHW
+WtOuDz5ERowcqdQhilz1/Ccep307dd9zXwhukTtq/VhN815VGifGN+CH+/dz6eqBIplnR4wk0Wg0
+tI5DaD5lZWVk5/vvcVlTEP7pJ54k48aNU4LskydNJlV/WUv7duSm1+pCcCrprYJjDf2x33n3HRZ1
+K6NkHzZosNImiChiM2z+jEC+xLixY31V5fE9H+zejbbijGp6aCZkCSB3lFCWh06ZNMlXYt//wAN2
+83tR5Abw8LHR8Vkb1q0LPLlXrVxpb3qR5Ab2WZrWuOeft21hv9YVmhlDB5jejt9KbQlOK739auIA
+VXzuvP8RSup0UN2hyCLNJk58wbce45DoixYu8kV1x+FNaYJwl+JcCc5ie9e9v0v6w2C0mbgBh9uK
+Fa8GxjZXpO2wbQ4hWUp2iTE0CGgTKtjivAmuhfSG1J46Y7rvGzARQelUowq5EwHfzsYNG6WuLUPY
+jKsUz+JIbirb2+6Oakkvmbb2L341TqkNCOB+ho8YbsgtACAa/AA42GWBwZ/E1Rbn6WQrpXkTPMqy
+TlZ044ATjXNfLa4bEbOxDLn5A88cNdw44GUA3nxoDjK5JIzgLNK7pKREyuYDcRha7UgDnFKzZszU
+juBwqKlK7kTggIfvRQMprs5kE0I5JE2G9I5LFoUmRmbE6rVrpKqTrEAoTKf1hWNVhqYEKQ5vPiW4
+VJoxO9loc85ltGFSXW1MB12q6RiTO3yFDOcuY3sn5hx1HhKc6qSRIb11JXfcHpdlL7Jg2rSpWpI7
+bg6JluSoQWCwxZmlOBPBnW4tg1W0vfHgdCV3HG9UVSp9fyiw0MGv4bfPg8EWj7J2fWGV4KUqSm94
+y3WyCVMB2VAqS/GysnkkCFi+aqXQdWbwqKNePOoLwZ2TharEDdU/ooAHpbtU0UGKQ3oH4RCNo/zV
+FUIdmwxSvNgXgjsni+dea3BsiEpJxQPCgwoSIMXhpVYNFRUVgVpn+BEmFk2xnYaKSfFsZ6aAdIJT
+nSwlJbOFPSSkn+rq8EmHTdXVyt0TarqDBhymiOeLwsABA6VLcSqCOyeK58QWxARFSW/Y3bo71VIB
+pZCiJAutpsSjYYOKgNkhSmNCIxM0qaBAb8ehLU2CUxn+KMgXteGCZHcnQ2WlOrY4Ot0EGXMXLBB2
+oA4vHCJVinsmOG1oDNVSorptQDUPOg4c2K/MvRw6fDjQa23b44JU9SlFRXaYmEao0oTMbpR1kqAf
+mQgghilaNX/skUfIve3vJb3z86/7tz11deSL41+QQ0eOksvfXRZ2D58eParE5odkE73eLW5uYZlz
+D5P77/svkpfX1KRDF9tPP/2U7PvwQ3Ls5AmhqjrqunkLJYSH4Wim0Djh0IZp7EmV85yqap0iF4hH
+7zlOrNP//reQzSYqTfLuO++01ami4iLy49atM/7+N+fOkcrVq0lFVRU5feaMkE137OhnvteLMzYz
+SIu8zp3J6FGjyXPjn3OnSdQfIn/4wx/IW1u2CDlcoXV+8vHH3K/L0IG1/lJjoycnVpZHchcSitAY
+EltEAI38RJAbbZT21taSsgXzXZEbwO+9OG0a+aclaRknT6ZEvBe7n6jb+4EQif2/CxeROksbcktu
+oEtuF7vdVewfB2wtizegqYhIgIGjmbIIJddrlZlXGzxKc1ciEltwCvJut4SN9sbKVfamcUvsZMD7
+q9ett6+nOrm84uuvT3O9Xoe27WyCeiF2ssN127ZtZPY0/u22RSUaDSmkDm1HhRCc1rkmKjS2dOnv
+uZP7zxUVZPjIEVyu9/hTT9obFxs4SDhrmSI8yb1921amwzQR0KB4k1xUuvD4CRNoQ2ZiCE4rvRlO
+qrS2N880yTi5QUqewMZ9edEibpIck1X8Bia7qEhukSQXJcUxtIECLZ0GK/4THCcUTirVbe+xo0dz
+J3eiJJ8za1ZgJDiPdceBh4OPN7kTSd7n8QKuUlxEr3WGispCrgR3mjp475b6hBjS8EyThOcWzrRM
+9j4y5dAp01oL+4Xe1yhJdZP1BPtShBNIVwwdNMjVgQrVuG/fvuTue+6x1xw/8QwQGs2UiPLqq69x
+9YFUrF7NfR0QEaF0tg12m9nmVoJTqecinGsgFM80ySkZ+nOhfxdCGohbJrbBxT3ATHhx5kx70+EQ
+yLRZVVGP/QRI99JL6esRIC3jU2aQphvXGvATzwDlnQiPpltTaAc4SHgB95HpGUs2YQt5EtzzXYhy
+rtXU8Cvps2PdaZxqkNBuPPXYdP0HD0pbboiQDrQFFmBaqd9AkgYLnrLen041B2kRZ890iIPsOADS
+dWTJdJB4xYb167mvp2hnW0aCOwa959h3QaSA+2JALdt34AC36z31+BOpV89j0wg35YbPDBjAqG1M
+8p3g6GFPmWpp4xejR6f8NxyQIK0ncy1NcQgOEp6m0badO8QcmnSmrKuYuBsJ7ll6YwOIGAFcXb2J
+q3MtWepp3OamKV6B1IEDMBX69O3HJDn9nJyZaDfSJi5BPU9ne2NGHA3SFYdgljgvIPFFhJrOYMpG
+mQjuJLcPptmMIsBTPbdV8BTqOUsroje3bE6rptPgag+72UQVIJGHRq1sn5OdVnrTDoDEoZ+q2q55
+LruKajpMWcpmEIVMBCeULZmQTywCPNXzdGAp7MBmSxdSobHDITFVGHCfiN8UFXmX/q1/nPLfdjPm
+NeyuTf7+3pHeXL/3xwc/EbKelM0gsjOp6dwJjpMdrWJ5Ayc8T/U8XYYZq5c+Fqvndp9YTxnTX7wC
+ziGvUufOO+9O+W9fnf6K6X6uXLmS0g7nKmT2iynbjUaj1G+lIjhtaipDQXv6E5pzg78r//e9sM1/
+6TK/yqZfjokqO3F0zuyXuF3rjEYdYkQkvcTLSHmr6Vm81fMRI8XUfX/+r8+5Xk9USSfQpk2bNJLG
+/cGCckURzkpegKbmZVOibj6lRnVvByH3uKuGf+84nhpaIp56ikrzTduUMYtW9KfakKJsxRMNDdyv
++U2KwgmGSRQ2uj6U2nPrpUnBjKlTlZdmXsJmqdToTIeiG7Rvl9zkQoMI1YVNotlDGYL0RnBHPc/1
++imiurbYp7+ALiKbNiXvVprfsxeTzZzKB+FFmiBRSIWwmBvV0m3YLJam1RNsUJb4+oD+/ZP+PTru
+8AbPirrrnnu3buIJTqueMzgK0kJUQ/p9+/Yl/Xv0zaLMLkrrXd7lwY+waOEibWxSL2Gz11e9znxQ
+JNO4Uh2GaO3EG7ThPFdCks7EbZnKm57FSz2HxBHlDDp/vlHIdWtSEA7fo6y01PP1YI+mq57bWL3J
+1XXQEUa1sFgmwBnoas1rUmeDIVoAM88LIPWXL1ue9N/Q0klU3zaRAxJ4pq5mJVHPW9Go5yJSU0U7
+NdDH6+XFi1Mu9Kyp01yrjZlG0W5cv8GVY0/GYEYRgDPQje9ix67dNvFSHazb3t3qmuRYqz/9sSLl
+YThv3lxh31dk+6xH6SrMCt1KcKXUc4Bn2Kk50CQxlbMNm3br5i1pNy5OWxwEmeZMl5TOcXU/RS9M
+VDYslgluc+XTRQbw3dHoEFpMusMVByrmy6fzd+Aw0RGUiWJJk16u66pq/RI8T56MIajn27dvF/aF
+UbLJu/9aItAcYMPG9ARFDvKOHTvIl19+ee3vBg8a5Cqpx+39i+riKROo7nJTpIMmi276sCHmnNiL
+rnPnTqSwcEjGQ7Br14eFtlXGoS4yhIlyWYqEq/JLjY1N2prfmEQ99+zpEKmeA8e+OCb0+jjpoaq/
+mKbVD9RAGrsY13V7OOkQFssE5MwjpThT1uHc+fPJve3aZWz8AFPJazRhxPBhQskNJB70otR0ioIn
+aN/F6VR05dRzIF38lBfmWURMZY/TAnb30hWvutaCdAiLZQIOQTfecPg/fj5uHPdEFJBbV9U8EanC
+fi7U9Jx0BI94vSLsU11txmQkn5yhw4trSTZzFvnlhPGuG/LrFBbLLMVLXHmC4yTHQcgK+FGCQu64
+5sIj6YVZgrMkhagIqNP5+fnUmw4eYrx/2crXXL9Hx7BYOuDAdxs2A8lxEIKc31AmkCC23isSCQy5
+r2l1HJJeshLsb+wwz51bROWeJ+Kmm26SurDIuMKmA1FTJWYk22TYpD0LImkztppD17BYJrgNmyX6
+QfIe7mavoRu1HYcBTCo40347Y7rQ2gK/QJmb3qQ+9poX3SJ4qfVjjpcryfL6ivaiu7ItO3cm7dq2
+Iy1aNO3UWX+onhxvOEU9G2vy+Alk/sIFJIhgmWOGfnlts7PtoY9NJP7ly+TEyROeDlEREO1Fv7YO
+99xDUyY95FJjo52HfSOL/f3Yoz1IWIANxXtTwU4NKrnjduS69euphlRAIuP1t48+UvK7tWubI+Vz
+unTsSFODDm28urkN7tkIHMyxLW063NKiRSAJQJMOqxsQNmMpIgk7KEPQkSY2OI39jYcmonNL0uMo
+LzdwDy5dgUSQ4DZsphvye0ekfE6fPn2Y7PAsWukN1UEWOtx3f+A2SKoCiWBK8ZJASXF8F1mhYRyQ
+NMUn8bTVG2kJLqoDR6ovGSQMfeYZad8JKbbHUjQogBSSsVHxGcix99rzXFXIHkABZyNF2io2WIya
+4Pm9ekpXaUXW4co8/RcvXiLk2qibR+86dP489803rptkIBrSLieHdOvW3VYJRRw+8Div27BeSOMO
+6QRvJ3ckNHq7UzjacpgkuGz7MS83LxAEHztqNFepCQmNWekfWhuAthssSIcXvN2QsiB8v6f72I0v
+eN4rcu1pw2Yq4dFHH5W79+l8ULaTwI6DW/r6D17eCZvg888+k/olWWKqqoDnukFaYxKI6EMPZZnw
+hPOS6pgWKqr1sCwcO/qZ9PRsTFf1iFOXGhtzspzRwJ7Q+vbbpS8qQ26uMuARFkMnEcxNG/rTZ6Vo
+NJDqGKzIK0df95x7aDd+1F5QONpsR0EWzYdBXfYDlLm5SoBHWAxSu9+A/lRz01iATCpkEmJMMmur
+ImgCyL3XFTBd/ACNUEVlWRahyGDzK/GEMjdXCbCGxUDuX/xqnK9OKmgMOGBYSa5z2ExG7UUy3EE3
+oSWHToL7lHjCMEvZV8COZbFhQSiQm+foJlrggAHJmTarEzbTDaJm3rtS0e+6m+p9IHgrrchCN0vZ
+N0BSrXDZ9CEVxkTHKEHuRJKz2uQIm3ntoOo3xo0d69tnU2rNERDcewxcUppeENQ7pGmyOGWgmqvo
+dcaYZFZVXacWVX6nFtNqzVQqup8dXFga5EtXqyxzAkMBWLBm7Rolv1u6mdyu7VmLMD3oWgRLh9uO
+saohS8ebdtsSyG/QzNBujuMnTij7/Xg0HtQhbKZzYZCWBIcU50Ee0Zsi3ZQTA0f1fDDPzs1XFekm
+pxiCCwTIQzlPWQp4zs4OOpCbr6pfBanFOhc7Zem8MeCdVtETi4OHV608ZfxTCnjlQ0AjG0s3zUMo
+4B/QveOO1gTHxlhi2XAqnf48wmKJQIWXqijgqEGBSCr5VSA4qiqrtNeOsnT/ApCUGECnCslZw2LN
+IXqoBC3SzUGnhSotrLCXMAQxCP3+tSe4SiTnERZLpqWo6GsYXjiE+zXhqfbSalmU5MZeCsowDyqC
+owZZVZL7qeaJ8uxPGK+WNx4H6RRB39VPjzXIDcktq9egLII3eH1TqhZAKpC8bnetL1JAZFgM30ul
+hBDeZkgi/Aqb4TPR419VyR2L1csjuMrAA9q7d6/dmF6Wyg4VWrTkWaSIM1GEGdIcCJvJOqTxfSpe
+e41UVqntULt0mWqwRi2Vip44r1lVoJgBA+IzDZJnUVNB7Lr3d5GNb74pPFaK66sQSpLhCIsf0iCe
+KP8DiA0hgA47OmSpff31aar33dDi1lsxrGyTlzeBNKJPcZ5AUQTyplmb/oHUaBeNZvQyxtYkA5ou
++NWbDmqsH5IOz29ZeTmp+2Av83eHqePn85P83NuC4BHrfzzNloH6hBNWR8BBuGPHDvLZZ0ftPO/j
+p06lLMXE98TgQ7SIRhdZFU56bPb8ggh1g0UWH4MKzxzfv7p6Ezl8+AiJ1cfIle+/T3loQ0qjEwq6
+oKJRYmHhEG294zQzyi41Nt4AgqMe/LxX9UZ200WD/yDe3UVWjXjcuxyU0JFuwKHWoeMDXt92temi
+9Z8Lnu0BS3qw1gIb0ENm3N+Q23/U7amleVsD/hN3su2R9KEGGpHckFsRgtM5tWOJBI9J+lADziRH
+pEBESAnea0NuNXDsi2PMBG/w/O76mFl5BRAPKfFqRQyN4OUFC+zQnyG3Gjh09Ciziu5Z3w7CGCFa
+wMn1UNeuZPEidYbpIWyJmDxt3BjExiEBjUClRhXDhw2zQ0QqpkfL2ms0ztRLjY02p+3RRYDX8UUA
+EhHCMOO6ORJDFm/9dZ1yucte5pWJmkPGA7NmzCTLV628dp9IJQ0bEtfAA/ZYBI8kSnD7L71e5d2t
+W0O34KtWrmxyomKap2pA1hsSUhDKTGefQ2KDNKjFVlEd/zyh5gGx7jBKcST30NrfzQnuWU0/dPhw
+6Ba8pqamyZ+/Ov2VMRIF4ey5c03+vGH9+nB9/zNnaU3hWi4ED+Opuu/AgSZ/Vrnrqe5ovrkx9zxM
+YGhLfT3BHaP8otcrhelUTebwCLOzUfRaX3e4aj522Ct211KZf3sSk9eyUjHfLTZWbwrPgqewt2GX
+G8hZa8yJD4t6TnmgVSf+ISvdP7oBvLTJTtsg4vMUjS6a2+UG7EglOGgbH4RIPedLcGDlqnBIsOZO
+nzh2WtLG5ObzA6R0qvBeWJyaKG2mAApMGlIS3NHdN3u9KhxPYdjg6eztsrIyw0xOWPbKKyn/LQxO
+TWjElH0LrhPQWW5+KRPgeEJBfpjBY9qmwVXpHXbHJYNGvNQtwT1708PkbEt1yGGOtwEbFi5Zkvbf
+z337baC/P8LOO+mSp+qbq+dJCe6o6VTONpVys/0AvJ7Go06PyZMmZ1RNZXeykY2Kigpu0juVBAcq
+JToGAoW5CxaEJqrAEzgYq/6yNtRrABMPph4FLqYSykkJ7iS9eI5H4PQNS5wynao+dcZ0Y497AA5E
+HIxhBxy1lG24qlN1ZsryKvJZbagwAAddvwH9DcldkttLfzkVp8n6LL3TcjUlwa0ToZJQONuwucNu
+i8fX4cHu3XxX19F1NBUuX77k671hn3htHnnTj35kpHdTIDU15pngLFL8japKYnBVXccGRk2vbMAb
+i0YJ6ZxWb739tt1QQbamgc+LjhlD5i9ZLK0zrMrAs2LwP5Sm+0c3BPcsxeHphEc0aKDpfYYNjIJ9
+kE2WNMeB0n/wIFfxZIRk0Gddlu8En4PPw+FCgztatw7cvpo+YzrtW0/FO7dQEdwx3KmkuEn8aAqQ
+behPn7UlpqgSW3ii73/gAftA8SIZcSCPe/55+xASRXRcF9fH57CEuu666+5A7QusC0OVXGmmX7jW
+sikVbrntNgxGaLBeLb1+OsbEbN++PTAPA2olreRJpg0MHDCQRKNRpm4qOCxQsotEI14xYpXvDfPE
+dBs7lA44kCnXxh5swExwh+Q4KebQ3EWQ+rZR9sfKCHiGH3u0B+ncuRNp36592h5vIM1HH/3dHt3z
+tw/3Mc1ac0v2vNw8e3RTfu9IWsJDGp042WCPhUK3HxH3FqT9BDOWwfYeYhG8mhfBqaU4xhxhZncQ
+WvBiA0PFlAV0Om2fnX1NxVcFifeVbrabCFibOhDkhj8GJhslrjVV5EJwVinu11RKEbDWwTgUfEKQ
+Oqui7TaDhlOQybkWh+v54NYFQfBTNHcDuzUoGW6yBtMbXI8unTsHRjVnIPdmt+T2RHAHxbR3VfTi
+i4HwqsMeNfAHGAEcBNWcMefeEwc9Edwx6vfQ3FVQyinhbDLwB5jvrTMg4CYWTWG5xNxkJaE8JTgQ
+JRTJLwDifX5kdfEEPLgyxvYaNAVCrro7aiHgGMKFpxwzmQgluHOCLKW9S4SZdC+n7NGtm5b33eLm
+FtqueUGkQOs9A8HG2PY5SvMmGgked7hRt7dEfrbO9vizI0dqSe4/V1SQ2dOmaUl0JN3obHcz5k+U
+e3GsJcJ1mKw5brntNnibDtLese7D5RkykKSjQ9t2ZPUbb5AuuV3sP++qeY/8fNw4cvm7y1rcPyam
+YpyxjkBiEuoCGHIFELnKS1XvLUSCO1IcCdVzad+PMMHEiS9oeyoP18ThM/SZQWT7tq3XyA08/tST
+JPaPAyRPk7CTjhoTAC31lx7LYZMpL7TkZpLgCZIcqkNvasfDz0bZs611fHio9+adxQX1mYdkBXmn
+TJpMho8ckfb3Xl/1Ovld+VJy+swZ5s+8+847uVynuaana3JL3759We1uqObFLBfI4vA9YBxdpH0z
+YoI6NoiAaTFs0GDu1y22tBrYybTS9bFHHiFvrFxF6urqMpIbeG78c+SfR49y+cz/7tadv/Qeoaf0
+RtUgI7nrWcnNRYI7UrzQ+sHUN1nHKiERUhxScG9tLflx69bkUP0hsmP7NrL/wH5y9tw3JNZsXDOk
+ffucbNLOsrE7dXyARMeOtd/HAi+f2aNHDzJkSOG1e+1ZEOG6vqhjwIxz3cCh6hACM5KuU4tUgjsk
+R+isiOUab/11XdpKKhXBWBGU0m6u1KwrTn5+/nWHASteXrCAjJ8wQat1gDaKTjWMGOu0TCPKENwh
+OU6cXNr3I4HkT3+s0IrkomxxqLxuVGwVUDJzFlm28jWu10TO/969e8NI7iqL3FFe95TF+TtGWOzx
+eA8znRJhYIsXvTCR+3WLfvtb8k2KYYcqASE33uQG5sx+KYzkrudJbu4S3JHiTPFxXSU52hHxrtlG
+/Bohrh8r2odMVDxdt/JiTuSGYMxhCYlJIbhDcpxCq8NEcg4JDVqRHNpFr0iEe1hMtwYhHMnNxakm
+WkW34TgImMaNgijoeKFLCC3vwTwydtRo7tc9dvIE6duvv1LqOiS3CHIDK8qXaUNu5JdzIDdQLILc
+wiR4giQH0ZlrRHUKoXFIbkgpyV9etMjOQvMTG9dvsP0DItJcJ4+fQOYv1GOEEeLclFNAm4Obx1w6
+wR2SM3nW49Al4w1edYwtEtFwEDHoObNm2ckpfkBESDAOXTrw2jXdE1/gRe4q3k41PwiOho21PEiu
+S9GB13lbXoHMMZguifnlolXyF6dPt80FEdCl8Ijz4S2c3FIIzpvkumwG0SSHNB86aBB56aXZwhxw
+yE6bN28u2bFrt7B1gjP14P4DWjxPdGPhVEEohdxAlowPcVz/EcJQQx4HTk+MvlE9Vg7vv4j4eByw
+gaEu5z3cjYwYPsyWsjztbFwTqaeiyY1IierkxsQYHNacyA0OFMu6dykSPEGS51g/YJO35LE5QCDV
+nW+cwiiuAEfcTzp3JgMHDPCUBQcP/aZN1WTfvn3k7wf2C/GOpyK36mFQzn4HkDvCO9atDMEdkuc5
+6npLHtfTISlCJskTgcKV1rffbheGtGjRtIvLmTOn7WKSc99+K4XQupEb9vbwEcN5Ji9JJ7cvBOdt
+k8ft8jesDYNYdFhtcl2AZ7Vk4SKlyc3Z3vaN3L4RXATJIRXmzJypdPWRgI2jHblVd5AKCAVKc6gp
+RXARJAcQSlux4lVlN5EA1U8LqG5KIdV48pTJvJ+Lr+QGsvz88ATv+mZe15Q90N4rcPCgDBKJO2EA
+NCvUdatMbnjJUUcQNHL7LsGbSfNKwiGttbnUWLx4ibLSHCr71BnThY8A9guo6V6+bLmyvhFoUxhG
+ICC1WGj6qZYEd0heSignmKYCqpPKSkuVniktMgXUL6mteggThSKr167h7fREVVixKuRWjuAOyaHW
+oP1TS57XVd02hw043ZLmIgpVZNvaKmtNgmztOLkjoqrCAkNwh+RcY+U6SRb4Dpa98op2TjgcoCUl
+s5VWx8vKykRpSr6FwbQkuENy7h72RNtwyqRJSqvtIHrF6tVKS3QcmJjTpjKxATjRfldeLio8qYQz
+TTuCJxCduVurrlInrlJWVFSQne+/p0z8HH4NTHaZUlSkdExbgjY0ViV7W0uCOyRH3/VK3ip7HAhZ
+lZSUaFH0UFNTQz49elQ62UHqR7t3J6NHjVY+fxyHYlnZPF4128mAeWGFqtnb2hLcIXmO9aNahMoe
+VzcxqUQHogMIse22NvDHBz8hhyzC806BBaF/0rEj6datO+nTp4/SWo5EYgPI2YiqaG9rTXAZKruO
+RE/c3Mf+9Tmp2/vB1T/XXxUuV77/PmWcHb6IOPJy88gtLVqQvLxckt87otV3jzvQ3tyyWWSuv3Ih
+sEAS3CF5xFHZsw3Rw4u4xN534IDoIp56RyVv0G2NtCS4Q/JWDskHi/ycONHHjRunhZoaJmILVsXj
+mGsRu1TXtdKW4AlEF+qASwS87hPGT9BuflpQIDlHoN6xtWM6r5n2BE+Q5qUibfPmtuvAAQO1m4aq
+I2BfLysvJxurN8mMHGgttQNHcJm2eXP1HVK9uPjXRn0XIK3XrV8vSw2PY48jtRuCso6BIngC0XH6
+FstQ2+NAMwMMq49Go8Ypx2Bbb7BILVlaA1p6yENLcIfkOeRq0cpg2Z+NJv4FkQJDdg8q+LadO/wq
+m8WIrVJd4tqG4MnVdhA914/PN2RPLal9JHUg1fFQEjyB6FFy1RGX7dc9QI3v93QfUmDZ7WHzxMOm
+fnfrVnLo8GG/G1zUO+p4bRjWPTQEd0jeyrHNpdrnyQAHXZeOHW3p3vWhhwJH+MRUWkUq4k45qngl
+CRFCRXAVid6c8B3u7UDye/XUKl0UdnR19SZy+PARO0VWsVr2UBI71ARXmeiJQMFH2+xsm/SdO3ci
+7du1913SQ9U+cbKBfPnllzaZMThB0TbQoSa2IbhGRE9GfEwsuaN1a3LXXXdfKxIBbr31NupDILET
+bbxo5dgXx8iVK1fI8VOndBnaYIhtCJ6W7FHiszNO5KEAaERWL4BXfKlF7Gqziw3B3RC90JHovc1q
+KI0qh9gxsxSG4DREz3GIHtVBfQ8JoIZXOsS+YJbDEJyn+h41Ut1XaV1t1HBDcBlSPU72bLMiQlHv
+SOtKI60Nwf0ge55D9EJDdu4qeGXQU0kNwQ3Zwyapa43DzBBcF7JHHLIbmz050KG01rGrjaQ2BNeW
+7K0cssdfuSFdivoEQteanWEIHgbC5wVYwu9xCI1XzDjJDMHDTPo42fHK0ZD0IHMs/jJ2tCG4gTs7
+Pi7tcxJefjnwoGJfcEh8wZHMDcZ+NgQ34E/+ONmJcwDEET8UaNDgvEgCkYlRr/XF/wswAE8gjIv4
+tXRDAAAAAElFTkSuQmCC"  />
+
 
     <body>
         <div class="row text-center clock-row" ng-app="default-app" ng-controller="data-controller">
